--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -74,7 +74,7 @@ jQuery(document).ready(function(){
         	<div class="shadow"></div>
         	<div class="container940">
         		<h1 class="pagetitle">Call for papers</h1>
-                <div class="pagedesc">The 1st International Conference on Metaverse and Artificial Companions in Education and Society</div>
+                <div class="pagedesc">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</div>
                 <div class="clear"></div><!-- clear float -->
             </div><!-- end container940 -->
         </div><!-- end #header -->
@@ -108,7 +108,7 @@ jQuery(document).ready(function(){
                                
         <h2 class="title_pattern"><strong><span>Themes</span></strong></h2>
         <div class="separator small"></div>
-        <h3 class="morespace">The 1st International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024) focuses on the themes related to education and society. The main themes of MetaACES 2024 include but not limit to the followings (in alphabetical order):</h3>
+        <h3 class="morespace">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024) focuses on the themes related to education and society. The main themes of MetaACES 2024 include but not limit to the followings (in alphabetical order):</h3>
         <h5>Artificial Companion in Education</h5>
         <h5>Artificial Companion in Society</h5>
         <h5>Artificial Intelligence (AI)</h5>
