--- a/keynote.html
+++ b/keynote.html
@@ -96,7 +96,7 @@ jQuery(document).ready(function(){
 				<div class="container940">
 					<h1 class="pagetitle">Keynote</h1>
 					
-					<div class="pagedesc">The 1st International Conference on Metaverse and Artificial Companions in Education and Society</div>					
+					<div class="pagedesc">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</div>					
 					<div class="clear"></div><!-- clear float -->
 				</div><!-- end container940 -->
 			</div>
