--- a/about-us.html
+++ b/about-us.html
@@ -90,7 +90,7 @@ jQuery(document).ready(function(){
         	<div class="shadow"></div>
         	<div class="container940">
         		<h1 class="pagetitle">About Us</h1>
-                <div class="pagedesc">The 1st International Conference on Metaverse and Artificial Companions in Education and Society</div>
+                <div class="pagedesc">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</div>
                 <div class="clear"></div><!-- clear float -->
             </div><!-- end container940 -->
         </div><!-- end #header -->
@@ -113,7 +113,7 @@ jQuery(document).ready(function(){
         
         <h2 class="title_pattern"><strong><span>Introduction</span></strong></h2>
 <div class="separator small"></div>
-        <h3 class="morespace">The 1st International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024) will be conducted in hybrid mode on 19 - 21 June 2023.</h3>
+        <h3 class="morespace">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024) will be conducted in hybrid mode on 19 - 21 June 2023.</h3>
         <h3 class="morespace">We look forward to seeing you at MetaACES 2024!</h3>
 
                 <div class="separator small"></div>
