--- a/index.html
+++ b/index.html
@@ -59,31 +59,41 @@ jQuery(document).ready(function(){
 <body>
 <div id="outer-container">
 	<div id="container">
-   	  <div id="top">
-      <div id="logo"><a href="https://www.ncu.edu.tw/tw/index.html"><img src="image/ncu.png" width="90px" alt=""/></a><a href="http://www.lst.ncu.edu.tw/NLT_new/"><img src="image/nlt_logo.png" width="70px" alt=""/></a><a href="https://www.lttc.eduhk.hk/"></a><img src="image/TBICS logo.png" alt=""/></div>
-      <!-- end #logo -->
-      <div id="nav">
-       	  <ul id="topnav" class="sf-menu">
-           <li><a href="index.html" class="current">Home</a></li>
-           <li><a href="about-us.html">About US</a>
-          <ul>
-			<li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
-			<li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-			</ul>
-			</li>
-          <li><a href="call-for-paper.html">Papers</a> </li>
-          <li><a href="agenda.html">Programme</a>
-        <ul>
-			<li><a href="keynote.html">keynote</a> </li>
-			<li><a href="seminar.html">Seminar</a> </li>
-			<li><a href="workshop.html">Workshop</a> </li>
-			</ul>
-			</li>
-         <!--li><a href="keynote.html">Keynote Speech</a></li-->
-        <li><a href="reg.html">Registration</a></li>
-          <li><a href="location.html">location</a></li>
-   	      </ul>
-       	  <!-- #topnav -->
+   	  <div id="top" style="margin-left: 3rem; display: flex; align-items: center;">
+          <div id="logo" style="margin-right: 5rem;">
+            <a href="https://www.ncu.edu.tw/tw/index.html">
+              <img src="image/ncu.png" width="60px" alt=""/>
+            </a>
+            <a href="http://www.lst.ncu.edu.tw/NLT_new/">
+              <img src="image/nlt_logo.png" width="40px" alt=""/>
+            </a>
+            <a href="https://www.lttc.eduhk.hk/">
+              <img src="image/TBICS logo.png" width="60px" alt=""/>
+            </a>
+          </div>
+          <!-- end #logo -->
+          <div>
+           	  <ul id="topnav" class="sf-menu">
+               <li><a href="index.html" class="current">Home</a></li>
+               <li><a href="about-us.html">About US</a>
+              <ul>
+			    <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
+			    <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
+			    </ul>
+			    </li>
+              <li><a href="call-for-paper.html">Papers</a> </li>
+              <li><a href="agenda.html">Programme</a>
+            <ul>
+			    <li><a href="keynote.html">keynote</a> </li>
+			    <li><a href="seminar.html">Seminar</a> </li>
+			    <li><a href="workshop.html">Workshop</a> </li>
+			    </ul>
+			    </li>
+             <!--li><a href="keynote.html">Keynote Speech</a></li-->
+            <li><a href="reg.html">Registration</a></li>
+              <li><a href="location.html">location</a></li>
+   	          </ul>
+           	  <!-- #topnav -->
    	    </div>
        	<!-- #nav -->	
         </div><!-- end #top -->
@@ -93,7 +103,7 @@ jQuery(document).ready(function(){
         <div class="box_skitter box_skitter_large">
           <ul>
 
-            <li> <a href=""><img src="image/Metaaces 2023.png" alt="" /></a>
+            <li> <a href=""><img src="image/Metaaces 2024.png" alt="" /></a>
               <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
@@ -133,10 +143,10 @@ jQuery(document).ready(function(){
 
     <div id="content">
       <div id="main">
-        <h2 class="title_pattern"><strong><span>The 1st International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
+        <h2 class="title_pattern"><strong><span>The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
         <div class="separator small"></div>
          <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
-        <h3 class="morespace">The 1st International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by The Education University of Hong Kong, will be held on 19 - 21 June 2024 in a hybrid mode. MetaACES is one of the APSCE Theme-based International Conference Series.</h3>
+        <h3 class="morespace">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by The Education University of Hong Kong, will be held on 19 - 21 June 2024 in a hybrid mode. MetaACES is one of the APSCE Theme-based International Conference Series.</h3>
         <h3 class="morespace">MetaACES 2024 aims to provide an interactive platform for academics, researchers, practitioners, and professionals in the education sector to share and exchange research agenda, innovative ideas as well as practices of promoting and exploring metaverse, artificial companions, and related technologies. MetaACES 2024 comprises keynotes, seminars and panels delivered by internationally renowned scholars, researchers, and practitioners. Catalysed and facilitated by emerging technologies, the metaverse and related artificial companions will affect us in every aspect of our lives.</h3>        
         <h3 class="morespace">The conference program includes keynotes, seminars, presentations, and panels. All the accepted papers and abstracts of the conference will be published in ISBN-coded proceedings. Accepted full papers will be selected and invited to submit to one of the following Open Access journals: Research and Practice in Technology Enhanced Learning, and IEEE TCLT's Bulletin of the Technical Committee on Learning Technology.<h3>
                 
@@ -196,11 +206,11 @@ Misconceptions of statistics and data analysis in the research of e-learning and
 
         <div class="one_third firstcols"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
           <h2 class="valignmiddle">Paper Submission</h2>
-<h5 class="morespace">The deadline of MetaACE 2024 paper submission will be <strong><s>TBD</s><span style="color: violet;">  TBD</span></strong>. Please submit your papers via <a href="https://easychair.org/conferences/?conf=metaaces2023">EasyChair</a>.<br>
+<h5 class="morespace">The deadline of MetaACE 2024 paper submission will be <strong>TBD</span></strong>. Please submit your papers via <a href="https://easychair.org/conferences/?conf=metaaces2023">EasyChair</a>.<br>
                  Thank you for your support! </h5></div>
                 <div class="one_third"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                   <h2 class="valignmiddle">Important Dates</h2>
-                  <h5 class="morespace">Paper submission due: <strong><s>TBD</s><span style="color: violet;"> TBD</span></strong></h5>
+                  <h5 class="morespace">Paper submission due: <strong>TBD</strong></h5>
                   <h5 class="morespace">Review notification date: <strong>TBD<strong></h5>
                    <h5 class="morespace">Camera-ready paper due: <strong>TBD</strong></h5>
                   <h5 class="morespace">Registration due (Paper Authors): <p><strong>TBD</strong></h5>
