--- a/index.html
+++ b/index.html
@@ -73,26 +73,33 @@ jQuery(document).ready(function(){
           </div>
           <!-- end #logo -->
           <div>
-           	  <ul id="topnav" class="sf-menu">
-               <li><a href="index.html" class="current">Home</a></li>
-               <li><a href="about-us.html">About US</a>
+           	  
+       	  <ul id="topnav" class="sf-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About US</a>
               <ul>
-			    <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
-			    <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-			    </ul>
-			    </li>
-              <li><a href="call-for-paper.html">Papers</a> </li>
-              <li><a href="agenda.html">Programme</a>
-            <ul>
-			    <li><a href="keynote.html">keynote</a> </li>
-			    <li><a href="seminar.html">Seminar</a> </li>
-			    <li><a href="workshop.html">Workshop</a> </li>
-			    </ul>
-			    </li>
-             <!--li><a href="keynote.html">Keynote Speech</a></li-->
+			          <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
+			          <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
+			        </ul>
+			      </li>
+            <li><a href="call-for-paper.html">Papers</a> </li>
+            <li><a href="agenda.html">Programme</a>
+              <ul>
+			          <li><a href="keynote.html">keynote</a> </li>
+			          <li><a href="seminar.html">Seminar</a> </li>
+			          <li><a href="workshop.html">Workshop</a> </li>
+			        </ul>
+			      </li>
+            <!--li><a href="keynote.html">Keynote Speech</a></li-->
             <li><a href="reg.html">Registration</a></li>
-              <li><a href="location.html">location</a></li>
-   	          </ul>
+            <li><a href="location.html">Venue</a>
+              <ul>
+                <li><a href="accommodation.html">ACCOMMODATION</a> </li>
+                <li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank" style="display: block;">TRANSPORTATION to NCU</a> </li>
+                <li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank" style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
+              </ul>
+            </li>
+          </ul>
            	  <!-- #topnav -->
    	    </div>
        	<!-- #nav -->	
@@ -103,7 +110,7 @@ jQuery(document).ready(function(){
         <div class="box_skitter box_skitter_large">
           <ul>
 
-            <li> <a href=""><img src="image/Metaaces 2024.png" alt="" /></a>
+            <li> <a href=""><img src="image/Metaaces 2024.jpeg" alt="" width="1px"/></a>
               <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
@@ -146,7 +153,7 @@ jQuery(document).ready(function(){
         <h2 class="title_pattern"><strong><span>The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
         <div class="separator small"></div>
          <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
-        <h3 class="morespace">The 2rd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by The Education University of Hong Kong, will be held on 19 - 21 June 2024 in a hybrid mode. MetaACES is one of the APSCE Theme-based International Conference Series.</h3>
+        <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by The Education University of Hong Kong, will be held on 19 - 21 June 2024.</h3>
         <h3 class="morespace">MetaACES 2024 aims to provide an interactive platform for academics, researchers, practitioners, and professionals in the education sector to share and exchange research agenda, innovative ideas as well as practices of promoting and exploring metaverse, artificial companions, and related technologies. MetaACES 2024 comprises keynotes, seminars and panels delivered by internationally renowned scholars, researchers, and practitioners. Catalysed and facilitated by emerging technologies, the metaverse and related artificial companions will affect us in every aspect of our lives.</h3>        
         <h3 class="morespace">The conference program includes keynotes, seminars, presentations, and panels. All the accepted papers and abstracts of the conference will be published in ISBN-coded proceedings. Accepted full papers will be selected and invited to submit to one of the following Open Access journals: Research and Practice in Technology Enhanced Learning, and IEEE TCLT's Bulletin of the Technical Committee on Learning Technology.<h3>
                 
