--- a/location.html
+++ b/location.html
@@ -45,25 +45,31 @@ jQuery(document).ready(function(){
       <!-- end #logo -->
       <div id="nav">
        	  <ul id="topnav" class="sf-menu">
-          <li><a href="index.html">Home</a></li>
-           <li><a href="about-us.html">About US</a>
-          <ul>
-			<li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
-			<li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-			</ul>
-			</li>
-          <li><a href="call-for-paper.html">Papers</a> </li>
-          <li><a href="agenda.html">Programme</a>
-        <ul>
-			<li><a href="keynote.html">keynote</a> </li>
-			<li><a href="seminar.html">Seminar</a> </li>
-			<li><a href="workshop.html">Workshop</a> </li>
-			</ul>
-			</li>
-         <!--li><a href="keynote.html">Keynote Speech</a></li-->
-        <li><a href="reg.html">Registration</a></li>
-          <li><a href="location.html" class="current">location</a></li>
-   	      </ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About US</a>
+              <ul>
+			          <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
+			          <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
+			        </ul>
+			      </li>
+            <li><a href="call-for-paper.html">Papers</a> </li>
+            <li><a href="agenda.html">Programme</a>
+              <ul>
+			          <li><a href="keynote.html">keynote</a> </li>
+			          <li><a href="seminar.html">Seminar</a> </li>
+			          <li><a href="workshop.html">Workshop</a> </li>
+			        </ul>
+			      </li>
+            <!--li><a href="keynote.html">Keynote Speech</a></li-->
+            <li><a href="reg.html">Registration</a></li>
+            <li><a href="location.html">Venue</a>
+              <ul>
+                <li><a href="accommodation.html">ACCOMMODATION</a> </li>
+                <li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank" style="display: block;">TRANSPORTATION to NCU</a> </li>
+                <li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank" style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
+              </ul>
+            </li>
+          </ul>
        	  <!-- #topnav -->
    	    </div>
        	<!-- #nav -->	
@@ -84,9 +90,11 @@ jQuery(document).ready(function(){
     <div id="content" class="withsidebar">
       <div id="main">
         <div id="maincontent">
-<h3> The Education University of Hong Kong (EdUHK) </h3>
-              <a href="https://earth.google.com/web/search/eduhk/@22.4670285,114.1936333,56.52891188a,967.46634535d,35y,0h,45t,0r/data=CnAaRhJACiUweDM0MDQwOTA3MWQyZTg4Nzc6MHg5MDYyZDA4MzVjMGEyYjg3GcjMBS6PdzZAIam67HxkjFxAKgVlZHVoaxgCIAEiJgokCQOrbPnGeDZAEduUfKJ6dzZAGZxibajkjFxAIb8Lh14njFxAKAI">
-          <p><img alt="Qries" src="images/hkied.jpg" width="100%"></p> </a>
+          <h3> Venue </h3>
+          <a href="https://earth.google.com/web/search/eduhk/@22.4670285,114.1936333,56.52891188a,967.46634535d,35y,0h,45t,0r/data=CnAaRhJACiUweDM0MDQwOTA3MWQyZTg4Nzc6MHg5MDYyZDA4MzVjMGEyYjg3GcjMBS6PdzZAIam67HxkjFxAKgVlZHVoaxgCIAEiJgokCQOrbPnGeDZAEduUfKJ6dzZAGZxibajkjFxAIb8Lh14njFxAKAI">
+          <p><img alt="Qries" src="image/ncu_map.jpeg" width="100%"></p> </a>
+          <br>
+          <t2>National Central University, Taiwan</t2>
         </div>
         <!-- end #maincontent -->
         <div id="sidebar">
@@ -94,7 +102,7 @@ jQuery(document).ready(function(){
            <li class="widget-container">
               <h2 class="widget-title">Address</h2>
               <a href="https://earth.google.com/web/search/eduhk/@22.4670285,114.1936333,56.52891188a,967.46634535d,35y,0h,45t,0r/data=CnAaRhJACiUweDM0MDQwOTA3MWQyZTg4Nzc6MHg5MDYyZDA4MzVjMGEyYjg3GcjMBS6PdzZAIam67HxkjFxAKgVlZHVoaxgCIAEiJgokCQOrbPnGeDZAEduUfKJ6dzZAGZxibajkjFxAIb8Lh14njFxAKAI">
-             <p>10, Lo Ping Road, Tai Po, New Territories, Hong Kong</p> </a>
+             <p>320 No.300, Zhongda Rd., Zhongli Dist., Taoyuan City 32001, Taiwan (R.O.C.)（Engineering Building No.5）</p> </a>
 
            </li>
 
