--- a/seminar.html
+++ b/seminar.html
@@ -63,24 +63,32 @@ jQuery(document).ready(function(){
       <div id="logo"><a href="index.html"><img src="image/logo.png" alt=""  /></a></div>
       <!-- end #logo -->
       <div id="nav">
-       	  <ul id="topnav" class="sf-menu">
-           <li><a href="index.html">Home</a></li>
-           <li><a href="about-us.html">About US</a>
-          <ul>
-			<li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
-			<li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-			</ul>
-          <li><a href="call-for-paper.html">Papers</a> </li>
-          <li><a href="agenda.html">Programme</a>
-        <ul>
-			<li><a href="keynote.html">keynote</a> </li>
-			<li><a href="seminar.html" class="current">Seminar</a> </li>
-			<li><a href="workshop.html">Workshop</a> </li>
-			</ul>
-			</li>
-        <li><a href="reg.html">Registration</a></li>
-          <li><a href="location.html">location</a></li>
-   	      </ul>
+		<ul id="topnav" class="sf-menu">
+	   <li><a href="index.html">Home</a></li>
+	   <li><a href="about-us.html">About US</a>
+		 <ul>
+				 <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
+				 <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
+			   </ul>
+			 </li>
+	   <li><a href="call-for-paper.html">Papers</a> </li>
+	   <li><a href="agenda.html">Programme</a>
+		 <ul>
+				 <li><a href="keynote.html">keynote</a> </li>
+				 <li><a href="seminar.html">Seminar</a> </li>
+				 <li><a href="workshop.html">Workshop</a> </li>
+			   </ul>
+			 </li>
+	   <!--li><a href="keynote.html">Keynote Speech</a></li-->
+	   <li><a href="reg.html">Registration</a></li>
+	   <li><a href="location.html">Venue</a>
+		 <ul>
+		   <li><a href="accommodation.html">ACCOMMODATION</a> </li>
+		   <li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank" style="display: block;">TRANSPORTATION to NCU</a> </li>
+		   <li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank" style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
+		 </ul>
+	   </li>
+	 </ul>
        	  <!-- #topnav -->
    	    </div>
        	<!-- #nav -->	
