--- a/location.html
+++ b/location.html
@@ -91,7 +91,7 @@ jQuery(document).ready(function(){
       <div id="main">
         <div id="maincontent">
           <h3> Venue </h3>
-          <a href="https://earth.google.com/web/search/eduhk/@22.4670285,114.1936333,56.52891188a,967.46634535d,35y,0h,45t,0r/data=CnAaRhJACiUweDM0MDQwOTA3MWQyZTg4Nzc6MHg5MDYyZDA4MzVjMGEyYjg3GcjMBS6PdzZAIam67HxkjFxAKgVlZHVoaxgCIAEiJgokCQOrbPnGeDZAEduUfKJ6dzZAGZxibajkjFxAIb8Lh14njFxAKAI">
+          <a href="https://earth.google.com/web/search/%e6%a1%83%e5%9c%92%e5%b8%82%e4%b8%ad%e5%a3%a2%e5%8d%80%e4%b8%ad%e5%a4%a7%e8%b7%af%e4%b8%ad%e5%a4%ae%e5%a4%a7%e5%ad%b8/@24.9681558,121.1952988,132.74075911a,947.06937146d,35y,0h,45t,0r/data=CpIBGmgSYgolMHgzNDY4MjNjMWVjOTA0ZGNiOjB4Y2RjMTI5ZDQ0NTVjZTQ1NhnGbvoO2fc4QCGsvInGf0xeQCon5qGD5ZyS5biC5Lit5aOi5Y2A5Lit5aSn6Lev5Lit5aSu5aSn5a24GAIgASImCiQJwYoMTGJ4NkAR8pjbFJl1NkAZ1bYHF96MXEAheJqRdsqLXEAoAg">
           <p><img alt="Qries" src="image/ncu_map.jpeg" width="100%"></p> </a>
           <br>
           <t2>National Central University, Taiwan</t2>
@@ -101,7 +101,7 @@ jQuery(document).ready(function(){
           <ul>
            <li class="widget-container">
               <h2 class="widget-title">Address</h2>
-              <a href="https://earth.google.com/web/search/eduhk/@22.4670285,114.1936333,56.52891188a,967.46634535d,35y,0h,45t,0r/data=CnAaRhJACiUweDM0MDQwOTA3MWQyZTg4Nzc6MHg5MDYyZDA4MzVjMGEyYjg3GcjMBS6PdzZAIam67HxkjFxAKgVlZHVoaxgCIAEiJgokCQOrbPnGeDZAEduUfKJ6dzZAGZxibajkjFxAIb8Lh14njFxAKAI">
+              <a href="https://earth.google.com/web/search/%e6%a1%83%e5%9c%92%e5%b8%82%e4%b8%ad%e5%a3%a2%e5%8d%80%e4%b8%ad%e5%a4%a7%e8%b7%af%e4%b8%ad%e5%a4%ae%e5%a4%a7%e5%ad%b8/@24.9681558,121.1952988,132.74075911a,947.06937146d,35y,0h,45t,0r/data=CpIBGmgSYgolMHgzNDY4MjNjMWVjOTA0ZGNiOjB4Y2RjMTI5ZDQ0NTVjZTQ1NhnGbvoO2fc4QCGsvInGf0xeQCon5qGD5ZyS5biC5Lit5aOi5Y2A5Lit5aSn6Lev5Lit5aSu5aSn5a24GAIgASImCiQJwYoMTGJ4NkAR8pjbFJl1NkAZ1bYHF96MXEAheJqRdsqLXEAoAg">
              <p>320 No.300, Zhongda Rd., Zhongli Dist., Taoyuan City 32001, Taiwan (R.O.C.)（Engineering Building No.5）</p> </a>
 
            </li>
