--- a/agenda.html
+++ b/agenda.html
@@ -90,7 +90,8 @@ jQuery(document).ready(function(){
 				<div id="main">
 					<div id="maincontent">
                    <h4>Programme Summary</h4>
-					<a href="https://www.eduhk.hk/metaaces2023/download/MetaACES2023_Programme_20221027.pdf" target="_blank"><img src="image/metaaces2022_prog_summary.png" alt="METAACES2022 NOV 議程一覽" width="600"/></a><br><br>
+                   <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
+					<!-- <a href="https://www.eduhk.hk/metaaces2023/download/MetaACES2023_Programme_20221027.pdf" target="_blank"><img src="image/metaaces2022_prog_summary.png" alt="METAACES2022 NOV 議程一覽" width="600"/></a><br><br> -->
 				
 				
 					<div class="clear"></div><!-- clear float -->
@@ -102,23 +103,23 @@ jQuery(document).ready(function(){
                     	 <h2 class="widget-title">Important dates</h2>
                             <ul id="recentprojectwidget">
                              <strong> <li><span class="colortext">Paper submission due</span><br/>
-                                <span class="date"><s>February 3, 2023</s><span style="color: violet;">  February 28, 2023</span>
+                                <span class="date"><span>TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Review notification date</span><br/>
-                                <span class="date">April 28, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Camera-ready paper due</span><br/>
-                                <span class="date">May 8, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Registration due (Paper Authors)</span><br/>
-                                <span class="date">May 17, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                                <li><span class="colortext">Registration due (Non-Authors Participants)</span><br/>
-                                <span class="date">June 8, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span></strong>
                               </strong></li>
                             </ul>
