--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -244,35 +244,35 @@ Login EasyChair (<a href="https://easychair.org/" target="_blank">https://easych
                   <div class="clear"></div><!-- clear float -->
                 </div><!-- end #maincontent -->
                 
-                <!-- <div id="sidebar">
+                <div id="sidebar">
                 	<ul>
                     	<li class="widget-container">
                     	 <h2 class="widget-title">Important dates</h2>
                             <ul id="recentprojectwidget">
                              <strong> <li><span class="colortext">Paper submission due</span><br/>
-                                <span class="date"><s>February 3, 2023</s><span style="color: violet;">  February 28, 2023</span>
+                                <span class="date"><span>TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Review notification date</span><br/>
-                                <span class="date">April 28, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Camera-ready paper due</span><br/>
-                                <span class="date">May 8, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Registration due (Paper Authors)</span><br/>
-                                <span class="date">May 17, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span>
                               </li>
                                <li><span class="colortext">Registration due (Non-Authors Participants)</span><br/>
-                                <span class="date">June 8, 2023</span>
+                                <span class="date">TBD</span>
                                 <span class="clear"></span></strong>
                               </li>
                             </ul>
                         </li>
                     </ul>
-                </div> -->
+                </div>
                 <!-- end #sidebar -->
                 
                 <div class="clear"></div>
