--- a/keynote.html
+++ b/keynote.html
@@ -69,6 +69,7 @@ jQuery(document).ready(function(){
 		 <ul>
 				 <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
 				 <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
+				 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
 			   </ul>
 			 </li>
 	   <li><a href="call-for-paper.html">Papers</a> </li>
