--- a/workshop.html
+++ b/workshop.html
@@ -72,7 +72,8 @@
 					 <ul>
 							 <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
 							 <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-						   </ul>
+							 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
+							</ul>
 						 </li>
 				   <li><a href="call-for-paper.html">Papers</a> </li>
 				   <li><a href="agenda.html">Programme</a>
