--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ jQuery(document).ready(function(){
         <h2 class="title_pattern"><strong><span>The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
         <div class="separator small"></div>
          <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
-        <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by The Education University of Hong Kong, will be held on 19 - 21 June 2024.</h3>
+        <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by National Central University in Taiwan, will be held on 19 - 21 June 2024.</h3>
         <h3 class="morespace">MetaACES 2024 aims to provide an interactive platform for academics, researchers, practitioners, and professionals in the education sector to share and exchange research agenda, innovative ideas as well as practices of promoting and exploring metaverse, artificial companions, and related technologies. MetaACES 2024 comprises keynotes, seminars and panels delivered by internationally renowned scholars, researchers, and practitioners. Catalysed and facilitated by emerging technologies, the metaverse and related artificial companions will affect us in every aspect of our lives.</h3>        
         <h3 class="morespace">The conference program includes keynotes, seminars, presentations, and panels. All the accepted papers and abstracts of the conference will be published in ISBN-coded proceedings. Accepted full papers will be selected and invited to submit to one of the following Open Access journals: Research and Practice in Technology Enhanced Learning, and IEEE TCLT's Bulletin of the Technical Committee on Learning Technology.<h3>
                 
@@ -214,7 +214,7 @@ Misconceptions of statistics and data analysis in the research of e-learning and
 
         <div class="one_third firstcols"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
           <h2 class="valignmiddle">Paper Submission</h2>
-<h5 class="morespace">The deadline of MetaACE 2024 paper submission will be <strong>TBD</span></strong>. Please submit your papers via <a href="https://easychair.org/conferences/?conf=metaaces2023">EasyChair</a>.<br>
+<h5 class="morespace">The deadline of MetaACE 2024 paper submission will be <strong>TBD</span></strong>. Please submit your papers via <a href="#">EasyChair</a>.<br>
                  Thank you for your support! </h5></div>
                 <div class="one_third"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                   <h2 class="valignmiddle">Important Dates</h2>
