Change: Change the file of index.js

--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@ Misconceptions of statistics and data analysis in the research of e-learning and
 
         <div class="one_third firstcols"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
           <h2 class="valignmiddle">Paper Submission</h2>
-<h5 class="morespace">The deadline of MetaACE 2024 paper submission will be <strong>TBD</span></strong>. Please submit your papers via <a href="#">EasyChair</a>.<br>
+<h5 class="morespace">Please submit your papers via EasyChair. The paper submission system will open soon.<br>
                  Thank you for your support! </h5></div>
                 <div class="one_third"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                   <h2 class="valignmiddle">Important Dates</h2>
-                  <h5 class="morespace">Paper submission due: <strong>TBD</strong></h5>
-                  <h5 class="morespace">Review notification date: <strong>TBD<strong></h5>
-                   <h5 class="morespace">Camera-ready paper due: <strong>TBD</strong></h5>
-                  <h5 class="morespace">Registration due (Paper Authors): <p><strong>TBD</strong></h5>
-                  <h5 class="morespace">Registration due (Non-Authors Participants): <p><strong>TBD</strong></h5>
+                  <h5 class="morespace">Paper submission due: <strong>February 4, 2024 (Could be postponed to February 28, 2024)</strong></h5>
+                  <h5 class="morespace">Review notification date: <strong>April  28 , 2024<strong></h5>
+                   <h5 class="morespace">Camera-ready paper due: <strong>May 12, 2024</strong></h5>
+                  <h5 class="morespace">Registration due (Paper Authors): <p><strong>May 19, 2024</strong></h5>
+                  <h5 class="morespace">Registration due (Non-Authors Participants): <p><strong>June 8, 2024</strong></h5>
                 </div>
                 <div class="one_third lastcols">
                   <!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
