--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ jQuery(document).ready(function(){
         <div class="box_skitter box_skitter_large">
           <ul>
 
-            <li> <a href=""><img src="image/Metaaces 2024.jpeg" alt="" width="1px"/></a>
+            <li> <a href=""><img src="image/Metaaces 2024.png" alt="" width="1px"/></a>
               <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
