Fix 2rd to 2nd.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ jQuery(document).ready(function(){
 
     <div id="content">
       <div id="main">
-        <h2 class="title_pattern"><strong><span>The 2rd International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
+        <h2 class="title_pattern"><strong><span>The 2nd International Conference on Metaverse and Artificial Companions in Education and Society</span></strong></h2>
         <div class="separator small"></div>
          <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
         <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024), organized by National Central University in Taiwan, will be held on 19 - 21 June 2024.</h3>
