--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@ Misconceptions of statistics and data analysis in the research of e-learning and
               </div>
               <div class="one_third"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                 <h2 class="valignmiddle">Important Dates</h2>
-                <h5 class="morespace">Paper submission due: <strong>February 4, 2024 (Could be postponed to February 28,
-                    2024)</strong></h5>
+                <h5 class="morespace">Paper submission due: <strong>February 4, 2024</strong></h5>
                 <h5 class="morespace">Review notification date: <strong>April 28 , 2024<strong></h5>
                 <h5 class="morespace">Camera-ready paper due: <strong>May 12, 2024</strong></h5>
                 <h5 class="morespace">Registration due (Paper Authors): <p><strong>May 19, 2024</strong></h5>
