change homepage image

--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -431,7 +431,7 @@
             <li><a href="#">簡 </a></li-->
             </ul>
           </div>
-          <h4 div id="footertext"> Contact us: <a href="mailto:metaaces2023@eduhk.hk">metaaces2023@eduhk.hk</a> </h4>
+          <h4 div id="footertext"> Contact us: <a href="mailto:MetaACES2024@gmail.com">MetaACES2024@gmail.com</a> </h4>
         </div>
         <div class="clear"></div>
         <!-- clear float -->
