--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="box_skitter box_skitter_large">
             <ul>
 
-              <li> <a href=""><img src="image/Metaaces 2024.png" alt="" width="1px" /></a>
+              <li> <a href=""><img src="image/meta_final.png" alt="" width="1px" /></a>
                 <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
@@ -162,8 +162,8 @@
 
       <div id="content">
         <div id="main">
-          <h2 class="title_pattern"><strong><span>The 2nd International Conference on Metaverse and Artificial
-                Companions in Education and Society</span></strong></h2>
+          <h2 class="title_pattern" style="text-align: center;"><strong><span style="white-space: pre;">The 2nd International Conference on
+             Metaverse and Artificial Companions in Education and Society</span></strong></h2>
           <div class="separator small"></div>
           <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
           <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd
@@ -359,7 +359,7 @@ Misconceptions of statistics and data analysis in the research of e-learning and
             <li><a href="#">簡 </a></li-->
             </ul>
           </div>
-          <h4 div id="footertext"> Contact us: <a href="mailto:metaaces2023@eduhk.hk">metaaces2023@eduhk.hk</a> </h4>
+          <h4 div id="footertext"> Contact us: <a href="mailto:MetaACES2024@gmail.com">MetaACES2024@gmail.com</a> </h4>
         </div>
         <div class="clear"></div>
         <!-- clear float -->
