--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
       <div id="content">
         <div id="main">
-          <h2 class="title_pattern" style="text-align: center;"><strong><span style="white-space: pre;">The 2nd International Conference on
-             Metaverse and Artificial Companions in Education and Society</span></strong></h2>
+          <h2 class="title_pattern" style="text-align: center;"><strong><span style="white-space: pre;">The 2nd International Conference on</span>
+          </br><span>Metaverse and Artificial Companions in Education and Society</span></strong></h2>
           <div class="separator small"></div>
           <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
           <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd
