modify all contact us info and important date

--- a/agenda.html
+++ b/agenda.html
@@ -55,7 +55,7 @@ jQuery(document).ready(function(){
 
            </ul>
          </li>
-         <li><a href="call-for-paper.html">Papers</a> </li>
+         <li><a href="call-for-paper.html">Call For Papers</a> </li>
          <li><a href="agenda.html">Programme</a>
            <ul>
              <li><a href="keynote.html">keynote</a> </li>
@@ -105,23 +105,23 @@ jQuery(document).ready(function(){
                     	 <h2 class="widget-title">Important dates</h2>
                             <ul id="recentprojectwidget">
                              <strong> <li><span class="colortext">Paper submission due</span><br/>
-                                <span class="date"><span>TBD</span>
+                                <span class="date"><span>February 4, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Review notification date</span><br/>
-                                <span class="date">TBD</span>
+                                <span class="date">April 28, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Camera-ready paper due</span><br/>
-                                <span class="date">TBD</span>
+                                <span class="date">May 12, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Registration due (Paper Authors)</span><br/>
-                                <span class="date">TBD</span>
+                                <span class="date">May 19, 2024</span>
                                 <span class="clear"></span>
                               </li>
                                <li><span class="colortext">Registration due (Non-Authors Participants)</span><br/>
-                                <span class="date">TBD</span>
+                                <span class="date">June 8, 2024</span>
                                 <span class="clear"></span></strong>
                               </strong></li>
                             </ul>
@@ -262,7 +262,7 @@ jQuery(document).ready(function(){
             <li><a href="#">簡 </a></li-->
           </ul>
         </div>
-        <h4 div id="footertext"> Contact us: <a href="mailto:metaaces2023@eduhk.hk">metaaces2023@eduhk.hk</a> </h4></div>
+        <h4 div id="footertext"> Contact us: <a href="mailto:MetaACES2024@gmail.com">MetaACES2024@gmail.com</a> </h4></div>
         <div class="clear"></div>
         <!-- clear float --> 
       </div>
