--- a/location.html
+++ b/location.html
@@ -53,7 +53,7 @@ jQuery(document).ready(function(){
                 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
 			        </ul>
 			      </li>
-            <li><a href="call-for-paper.html">Papers</a> </li>
+            <li><a href="call-for-paper.html">Call For Papers</a> </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
 			          <li><a href="keynote.html">keynote</a> </li>
@@ -157,7 +157,7 @@ jQuery(document).ready(function(){
             <li><a href="#">簡 </a></li-->
           </ul>
         </div>
-        <h4 div id="footertext"> Contact us: <a href="mailto:metaaces2023@eduhk.hk">metaaces2023@eduhk.hk</a> </h4></div>
+        <h4 div id="footertext"> Contact us: <a href="mailto:MetaACES2024@gmail.com">MetaACES2024@gmail.com</a> </h4></div>
         <div class="clear"></div>
         <!-- clear float --> 
       </div>
