--- a/seminar.html
+++ b/seminar.html
@@ -72,7 +72,7 @@ jQuery(document).ready(function(){
 				 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
 			   </ul>
 			 </li>
-	   <li><a href="call-for-paper.html">Papers</a> </li>
+	   <li><a href="call-for-paper.html">Call For Papers</a> </li>
 	   <li><a href="agenda.html">Programme</a>
 		 <ul>
 				 <li><a href="keynote.html">keynote</a> </li>
@@ -141,23 +141,23 @@ jQuery(document).ready(function(){
                     	 <h2 class="widget-title">Important dates</h2>
                             <ul id="recentprojectwidget">
                              <strong> <li><span class="colortext">Paper submission due</span><br/>
-                                <span class="date"><s>February 3, 2023</s><span style="color: violet;">  February 28, 2023</span>
+                                <span class="date">February 4, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Review notification date</span><br/>
-                                <span class="date">April 28, 2023</span>
+                                <span class="date">April 28, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Camera-ready paper due</span><br/>
-                                <span class="date">May 8, 2023</span>
+                                <span class="date">May 12, 2024</span>
                                 <span class="clear"></span>
                               </li>
                               <li><span class="colortext">Registration due (Paper Authors)</span><br/>
-                                <span class="date">May 17, 2023</span>
+                                <span class="date">May 19, 2024</span>
                                 <span class="clear"></span>
                               </li>
                                <li><span class="colortext">Registration due (Non-Authors Participants)</span><br/>
-                                <span class="date">June 8, 2023</span>
+                                <span class="date">June 8, 2024</span>
                                 <span class="clear"></span>
 										</ul>
 									</strong></li>
@@ -250,7 +250,7 @@ jQuery(document).ready(function(){
             <li><a href="#">簡 </a></li-->
 			  </ul>
 			</div>
-			<h4 div id="footertext"> Contact us: <a href="mailto:metaaces2023@eduhk.hk">metaaces2023@eduhk.hk</a> </h4></div>
+			<h4 div id="footertext"> Contact us: <a href="mailto:MetaACES2024@gmail.com">MetaACES2024@gmail.com</a> </h4></div>
 			<div class="clear"></div>
 			<!-- clear float --> 
 		  </div>
