remove about us info, remember to check with wu before make website online

--- a/about-us.html
+++ b/about-us.html
@@ -117,14 +117,14 @@
 
       <div id="content">
         <div id="main">
-          <!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
+          <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
           <!--h2 class="title_pattern"><strong><span>Theme</span></strong></h2>
         <h1 class="morespace">Learning and Teaching in the Big Data Era</h1>
                  
         <div class="separator small"></div-->
 
 
-          <h2 class="title_pattern"><strong><span>Introduction</span></strong></h2>
+          <!-- <h2 class="title_pattern"><strong><span>Introduction</span></strong></h2>
           <div class="separator small"></div>
           <h3 class="morespace">The 2nd International Conference on Metaverse and Artificial Companions in Education and
             Society (MetaACES 2024) will be conducted on 19 - 21 June 2024.</h3>
@@ -257,7 +257,7 @@
           <div class="center">
             <div class="org-title">Senior PC members</div>
           </div>
-          <div class="separator small"></div>
+          <div class="separator small"></div> -->
 
           <!-- <div class="one_third firstcols">
             <div class="org-title"></div>
