update PC member afflication

--- a/about-us.html
+++ b/about-us.html
@@ -127,9 +127,9 @@
 
           <h2 class="title_pattern"><strong><span>Introduction</span></strong></h2>
           <div class="separator small"></div>
-          <h3 class="morespace">The 2nd International Conference on Metaverse and Artificial Companions in Education and
+          <h3 class="morespace" style="font-size:16px;">The 2nd International Conference on Metaverse and Artificial Companions in Education and
             Society (MetaACES 2024) will be conducted on 19 - 21 June 2024.</h3>
-          <h3 class="morespace">We look forward to seeing you at MetaACES 2024!</h3>
+          <h3 class="morespace" style="font-size:16px;">We look forward to seeing you at MetaACES 2024!</h3>
 
           <div class="separator small"></div>
           <h2 class="title_pattern"><strong><span>Organization</span></strong></h2>
@@ -140,7 +140,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <tbody>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">Advisory Committee Chair</td>
@@ -169,7 +169,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <tbody>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">Steering Committee Chair</td>
@@ -188,7 +188,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <tbody>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 text-left">Maria Mercedes T. RODRIGO</td>
@@ -201,7 +201,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <tbody>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">International Program Chair</td>
@@ -227,9 +227,9 @@
             <hr>
           </div>
           <div class="ml-[40px]" style="min-width:calc(100% - 40px);">
-            <h3 class="org-title2">Track 1: AI and Artificial Companions in Education</h3>
+            <h3 class="org-title">Track 1: AI and Artificial Companions in Education</h3>
             <div class="flex justify-center">
-              <table class="font-[Poppins] border-1">
+              <table class="border-1" style="font-size:14px;">
                 <tbody>
                   <tr class="hover:bg-gray-100 duration-300">
                     <td class="py-3 px-6 font-extrabold text-left">Track Chair</td>
@@ -251,9 +251,9 @@
             </div>
           </div>
           <div class="ml-[40px]" style="min-width:calc(100% - 40px);">
-            <h3 class="org-title2">Track 2: Metaverse in Education</h3>
+            <h3 class="org-title">Track 2: Metaverse in Education</h3>
             <div class="flex justify-center">
-              <table class="font-[Poppins] border-1">
+              <table class="border-1" style="font-size:14px;">
                 <tbody>
                   <tr class="hover:bg-gray-100 duration-300">
                     <td class="py-3 px-6 font-extrabold text-left">Track Chair</td>
@@ -275,9 +275,9 @@
             </div>
           </div>
           <div class="ml-[40px]" style="min-width:calc(100% - 40px);">
-            <h3 class="org-title2">Track 3: Social Issues</h3>
+            <h3 class="org-title">Track 3: Social Issues</h3>
             <div class="flex justify-center">
-              <table class="font-[Poppins] border-1">
+              <table class="border-1" style="font-size:14px;">
                 <tbody>
                   <tr class="hover:bg-gray-100 duration-300">
                     <td class="py-3 px-6 font-extrabold text-left">Track Chair</td>
@@ -299,9 +299,9 @@
             </div>
           </div>
           <div class="ml-[40px]" style="min-width:calc(100% - 40px);">
-            <h3 class="org-title2">Teacher Forum</h3>
+            <h3 class="org-title">Teacher Forum</h3>
             <div class="flex justify-center">
-              <table class="font-[Poppins] border-1">
+              <table class="border-1" style="font-size:14px;">
                 <tbody>
                   <tr class="hover:bg-gray-100 duration-300">
                     <td class="py-3 px-6 font-extrabold text-left">Track Chair</td>
@@ -317,7 +317,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <thead>
               <tr>
                 <th class="py-3 text-left">Role</th>
@@ -368,7 +368,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <thead>
               <tr>
                 <th class="py-3 text-left"></th>
@@ -480,8 +480,14 @@
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">21. </td>
                 <td class="py-3 px-6 text-left">Prof. Li, S C Sandy</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">Hong Kong Baptist University, Hong Kong</td>
               </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left">22. </td>
+                <td class="py-3 px-6 text-left">Prof. Cristina Conati</td>
+                <td class="py-3 px-6 text-left">University of British Columbia, Canada</td>
+              </tr>
+              
               <!-- <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">7. </td>
                 <td class="py-3 px-6 text-left">Gwo-Jen Hwang</td>
@@ -534,7 +540,7 @@
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
-          <table class="font-[Poppins] border-1 min-w-full">
+          <table class="border-1 min-w-full" style="font-size:14px;">
             <thead>
               <tr>
                 <th class="py-3 text-left"></th>
@@ -792,52 +798,48 @@
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">50. </td>
                 <td class="py-3 px-6 text-left">Qiu-Rong Zeng</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Yang Ming Chiao Tung University, Department of Computer Science and Engineering
+                </td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">51. </td>
                 <td class="py-3 px-6 text-left">Hui-Chun Hung</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Central University, Taiwan</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">52. </td>
                 <td class="py-3 px-6 text-left">Cheng-Yi Eric Lin</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Taiwan Normal University, Taiwan</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">53. </td>
                 <td class="py-3 px-6 text-left">Yu-Hui Liao</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">Chinese Culture University</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">54. </td>
                 <td class="py-3 px-6 text-left">Chih-Yueh Chou</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">Yuan Ze University, Department of Computer Science and Engineering</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">55. </td>
                 <td class="py-3 px-6 text-left">Yung-Hsiang Hu</td>
-                <td class="py-3 px-6 text-left"></td>
-              </tr>
-              <tr class="hover:bg-gray-100 duration-300">
-                <td class="py-3 px-6 font-extrabold text-left">55. </td>
-                <td class="py-3 px-6 text-left">Yung-Hsiang Hu</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Yunlin University of Science and Technology</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">56. </td>
                 <td class="py-3 px-6 text-left">Chih-Hsiao Tsai</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Taipei Univeristy of Education</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">57. </td>
                 <td class="py-3 px-6 text-left">Hui-Ju Tsai</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">National Taipei Univeristy</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">58. </td>
                 <td class="py-3 px-6 text-left">CHIU Kin-fung, Thomas</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 text-left">Chinese University of Hong Kong, Hong Kong</td>
               </tr>
               <!-- <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">7. </td>
